--- a/templates/wso2service.j2
+++ b/templates/wso2service.j2
@@ -43,8 +43,8 @@ fi
 JAVA_HOME="{{ java_home }}"
 JVM_MEM="{{ jvm_mem }}"
 USER="{{ wso2_user}}"
-PRODUCT_CODE="integrator"
-PRODUCT_PROFILE="integrator"
+PRODUCT_CODE="wso2server"
+PRODUCT_PROFILE="wso2server"
 CARBON_HOME="{{ carbon_home }}"
 CMD="${CARBON_HOME}/bin/${PRODUCT_PROFILE}.sh"
 
